// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializers serializes a build 1`] = `
Object {
  "app": "test",
  "canary": undefined,
  "created": "2013-10-23T07:00:00.000Z",
  "id": 1,
  "namespace": null,
  "releaseId": null,
  "released": false,
  "removed": false,
  "stage": "review",
  "status": "UNRELEASED",
  "values": Object {},
  "version": "v1",
}
`;

exports[`serializers serializes a release 1`] = `
Object {
  "app": "test",
  "canary": null,
  "created": "2013-10-23T07:00:00.000Z",
  "id": 2,
  "namespace": null,
  "releaseId": 1,
  "released": true,
  "removed": false,
  "stage": "review",
  "status": "PENDING",
  "values": Object {},
  "version": "v2",
}
`;

exports[`serializers serializes an app 1`] = `
Object {
  "config": Object {
    "chart": "service",
    "deploy": "nav-mock-deploy",
  },
  "created": "2013-10-23T07:00:00.000Z",
  "id": 1,
  "manifest": Object {
    "config": Object {
      "chart": "service",
      "deploy": "nav-mock-deploy",
    },
    "name": "test",
    "stages": Array [
      Object {
        "clusters": Array [
          Object {
            "name": "test",
            "namespace": "default",
          },
        ],
        "name": "review",
      },
    ],
  },
  "modified": "2013-10-23T07:00:00.000Z",
  "name": "test",
  "stages": Array [
    Object {
      "builds": Array [
        Object {
          "app": "test",
          "canary": null,
          "created": "2013-10-23T07:00:00.000Z",
          "id": 3,
          "namespace": null,
          "releaseId": 2,
          "released": true,
          "removed": false,
          "stage": "review",
          "status": "PENDING",
          "values": Object {},
          "version": "v3",
        },
        Object {
          "app": "test",
          "canary": null,
          "created": "2013-10-23T07:00:00.000Z",
          "id": 2,
          "namespace": null,
          "releaseId": 1,
          "released": true,
          "removed": false,
          "stage": "review",
          "status": "PENDING",
          "values": Object {},
          "version": "v2",
        },
        Object {
          "app": "test",
          "canary": undefined,
          "created": "2013-10-23T07:00:00.000Z",
          "id": 1,
          "namespace": null,
          "releaseId": null,
          "released": false,
          "removed": false,
          "stage": "review",
          "status": "UNRELEASED",
          "values": Object {},
          "version": "v1",
        },
      ],
      "clusters": Array [
        Object {
          "name": "test",
          "namespace": "default",
        },
      ],
      "current": Object {
        "app": "test",
        "canary": null,
        "created": "2013-10-23T07:00:00.000Z",
        "id": 3,
        "namespace": null,
        "releaseId": 2,
        "released": true,
        "removed": false,
        "stage": "review",
        "status": "PENDING",
        "values": Object {},
        "version": "v3",
      },
      "name": "review",
      "previous": Object {
        "app": "test",
        "canary": null,
        "created": "2013-10-23T07:00:00.000Z",
        "id": 2,
        "namespace": null,
        "releaseId": 1,
        "released": true,
        "removed": false,
        "stage": "review",
        "status": "PENDING",
        "values": Object {},
        "version": "v2",
      },
      "released": Object {
        "app": "test",
        "canary": null,
        "created": "2013-10-23T07:00:00.000Z",
        "id": 3,
        "namespace": null,
        "releaseId": 2,
        "released": true,
        "removed": false,
        "stage": "review",
        "status": "PENDING",
        "values": Object {},
        "version": "v3",
      },
    },
  ],
}
`;
